--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
+spring.datasource.url=jdbc:mysql://localhost/challenge_foro
+spring.datasource.username=root
+spring.datasource.password=password
 
+#spring.jpa.hibernate.ddl-auto=create
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
+server.error.include-stacktrace=never
